--- a/css/styles.css
+++ b/css/styles.css
@@ -5,4 +5,20 @@
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
+}
+
+.tooltip-facturacion {
+  text-align: center;
+  width: 230px;
+  padding: 10px;
+}
+.tooltip-facturacion .header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+.tooltip-facturacion .header img {
+  width: 15px;
+  margin-right: 5px;
 }/*# sourceMappingURL=styles.css.map */
