--- a/css/styles.scss
+++ b/css/styles.scss
@@ -8,3 +8,21 @@ $icon-tam: 30px;
     background-size: cover;
     background-repeat: no-repeat;
 }
+
+.tooltip-facturacion {
+    text-align: center;
+    width: 230px;
+    padding: 10px;
+
+    .header {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 10px;
+
+        img {
+            width: 15px;
+            margin-right: 5px;
+        }
+    }
+}
