--- a/css/styles.scss
+++ b/css/styles.scss
@@ -26,3 +26,27 @@ $icon-tam: 30px;
         }
     }
 }
+
+.tippy-box[data-theme~='tooltip-facturacion-content'] {
+    background-color: white;
+    color: black;
+    box-shadow: 0px 0px 19px 3px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 0px 19px 3px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 0px 19px 3px rgba(0, 0, 0, 0.2);
+}
+
+.tippy-box[data-theme~='tooltip-facturacion-content'][data-placement^='top']>.tippy-arrow::before {
+    border-top-color: white;
+}
+
+.tippy-box[data-theme~='tooltip-facturacion-content'][data-placement^='bottom']>.tippy-arrow::before {
+    border-bottom-color: white;
+}
+
+.tippy-box[data-theme~='tooltip-facturacion-content'][data-placement^='left']>.tippy-arrow::before {
+    border-left-color: white;
+}
+
+.tippy-box[data-theme~='tooltip-facturacion-content'][data-placement^='right']>.tippy-arrow::before {
+    border-right-color: white;
+}
